--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,22 @@
 #root {
-  max-width: 1280px;
+  --white: #f2f2f2;
+  --secondary: #aadb1e;
+  --sec-col: #B9D6F2;
+  --pry-col: #53caec;
+  --black: #121212
+}
+
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  font-family: 'Plein', sans-serif;
 }
