--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
-  --white: #f2f2f2;
+  --white: #fff;
+  --grey: #d3d3d366;
   --secondary: #aadb1e;
   --sec-col: #B9D6F2;
   --pry-col: #53caec;
