--- a/src/components/about/s_About.module.css
+++ b/src/components/about/s_About.module.css
@@ -1,13 +1,8 @@
-.trending-container {
+.about-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 2rem;
     padding: 1rem;
     background-color: var(--white);
-}
-
-.trending-img {
-    width: 9rem;
-    margin: 1.5rem 0;
 }
