--- a/src/components/navbar/s_Navbar.module.css
+++ b/src/components/navbar/s_Navbar.module.css
@@ -151,10 +151,9 @@
 
 .show-search {
     z-index: 1;
-    position: relative;
     display: block;
     width: 100%;
-    position: fixed;
+    position: absolute;
     left: 0;
     margin-top: 3.5rem;
     padding: 0.5rem 1.5rem;
