--- a/src/components/Trending/s_Trending.module.css
+++ b/src/components/Trending/s_Trending.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem;
+    margin: 1.5rem;
     padding: 1rem;
     background-color: var(--white);
 }
@@ -10,4 +10,9 @@
 .trending-img {
     width: 9rem;
     margin: 1.5rem 0;
+}
+
+.h2 {
+    font-size: var(--heading-font);
+    text-align: center;
 }
