--- a/src/components/about/s_About.module.css
+++ b/src/components/about/s_About.module.css
@@ -5,7 +5,7 @@
     margin: 1.5rem;
     padding: 1.5rem;
     gap: 2rem;
-    line-height: 2rem;
+    line-height: 2;
     background-color: var(--white);
 }
 
