--- a/src/components/footer/s_Footer.module.css
+++ b/src/components/footer/s_Footer.module.css
@@ -2,4 +2,8 @@
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
+    flex: 1;
+    justify-content: flex-end;
+    border-top: solid 1px var(--black);
+
 }
