--- a/src/components/navbar/s_Navbar.module.css
+++ b/src/components/navbar/s_Navbar.module.css
@@ -35,6 +35,15 @@
     padding: .5rem 2rem;
 }
 
+.header {
+    position: relative;
+    background-color: var(--white);
+    padding: 1rem;
+    display: flex;
+    height: 4rem;
+    border-bottom: solid 1px grey;
+}
+
 .list:hover {
     background-color: var(--black);
     color: var(--white)
@@ -149,12 +158,19 @@
 
 .show-search {
     z-index: 1;
-    display: block;
+    display: none;
     width: 100%;
     position: absolute;
     left: 0;
     margin-top: 3.5rem;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1.5rem 2.5rem;
+    opacity: 0;
+    background-color: var(--white);
+}
+
+.show-search-active {
+    display: block;
+    opacity: 1;
 }
 
 .cart-section {
@@ -201,6 +217,10 @@
 }
 
 @media screen and (min-width:1024px) {
+    .header {
+        padding: 1.5rem 1rem;
+    }
+
     .list {
         font-size: 1.2rem;
         border-bottom: none;
