--- a/src/components/patronizeDetails/s_Details.module.css
+++ b/src/components/patronizeDetails/s_Details.module.css
@@ -1,5 +1,7 @@
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
+    display: flex;
+    align-items: center;
     position: relative;
     background-color: var(--white);
     color: #444;
@@ -11,13 +13,12 @@
     outline: none;
     transition: 0.4s;
     box-shadow: 0px 1px 2px #cecece;
-    /* box */
 }
 
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-/* .active {
-    background-color: var(--secondary);
-} */
+.accordion-title {
+    width: 90%;
+    line-height: 1.5;
+}
 
 /* Style the accordion panel. Note: hidden by default */
 .panel {
@@ -32,7 +33,7 @@
     padding: 1rem 0;
     text-align: left;
     font-size: 0.9rem;
-    line-height: 1.5rem;
+    line-height: 1.5;
 }
 
 .accordion:after {
