--- a/src/components/reachOut/s_ReachOut.module.css
+++ b/src/components/reachOut/s_ReachOut.module.css
@@ -13,12 +13,12 @@
 
 .reach-out-section {
     margin-left: 1rem;
-    line-height: 1rem;
+    line-height: 1;
 }
 
 .footer-customer-text {
     font-size: .875rem;
-    line-height: 1.5em;
+    line-height: 1.5;
     letter-spacing: 0.015625rem;
     max-width: 625px;
     margin-top: -1rem;
@@ -40,7 +40,7 @@
     color: rgb(255, 255, 255);
     font-size: 0.875rem;
     font-weight: 700;
-    line-height: 1.25em;
+    line-height: 1.25;
     letter-spacing: 0.020625rem;
     min-height: 32px;
     min-width: 100px;
@@ -52,6 +52,5 @@
 .reach-out-container {
     display: flex;
     flex-direction: column;
-    padding-bottom: 3rem;
-    border-bottom: solid 1px var(--black);
+    padding: 1.5rem 1.5rem 3rem;
 }
