--- a/src/components/subscribe/s_Subscribe.module.css
+++ b/src/components/subscribe/s_Subscribe.module.css
@@ -42,7 +42,7 @@
 .sign-up {
     font-size: 0.75rem;
     margin: 0.2rem 0 1.2rem 0;
-    line-height: 1rem;
+    line-height: 1;
 }
 
 .feedback-text {
