--- a/src/components/customerService/s_CustomerService.module.css
+++ b/src/components/customerService/s_CustomerService.module.css
@@ -7,5 +7,11 @@
 }
 
 .list {
+    display: block;
     margin: .5rem 0;
+    text-decoration: none;
+}
+
+.list:hover {
+    text-decoration: underline;
 }
