--- a/src/components/footer/s_Footer.module.css
+++ b/src/components/footer/s_Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
     display: flex;
     flex-direction: column;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 0.5rem;
     flex: 1;
     justify-content: flex-end;
     border-top: solid 1px var(--black);
