--- a/src/components/navbar/s_Navbar.module.css
+++ b/src/components/navbar/s_Navbar.module.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: 100%;
     left: 0;
-    transform: translateY(3rem);
+    transform: translateY(2.5rem);
     background-color: var(--secondary);
 }
 
@@ -33,12 +33,13 @@
     cursor: pointer;
     border-bottom: solid 1px #061A40;
     padding: .5rem 2rem;
+    text-decoration: none;
 }
 
 .header {
     position: relative;
     background-color: var(--white);
-    padding: 1rem;
+    padding: 1.5rem;
     display: flex;
     height: 4rem;
     border-bottom: solid 1px grey;
@@ -162,7 +163,7 @@
     width: 100%;
     position: absolute;
     left: 0;
-    margin-top: 3.5rem;
+    margin-top: 2.5rem;
     padding: 0.5rem 1.5rem 2.5rem;
     opacity: 0;
     background-color: var(--white);
