--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+    --white: #fff;
+    --grey: #d3d3d366;
+    --secondary: #aadb1e;
+    --sec-col: #B9D6F2;
+    --pry-col: #53caec;
+    --black: #170c0c;
+    --heading-font: 27px;
+    --text-font: 13px;
+  }
+  
+  *,
+  ::before,
+  ::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: var(--black);
+  }
+  
+  body {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    font-family: 'Plein', sans-serif;
+  }
+  
