--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 #root {
     --white: #fff;
     --grey: #d3d3d366;
@@ -23,7 +24,7 @@
   }
   html{ 
     height: 100%;
-    overflow: auto;
+    /* overflow: auto; removed overflow */
 
   }
   
@@ -34,5 +35,6 @@
     height: 100%;
     font-family: 'Plein', sans-serif;
   }
+  
   
   ::-webkit-scrollbar {display:none;}
