--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 #root {
     --white: #fff;
     --grey: #d3d3d366;
@@ -22,19 +21,15 @@
     box-sizing: border-box;
     color: var(--black);
   }
+
   html{ 
     height: 100%;
-    /* overflow: auto; removed overflow */
-
   }
-  
+
   body {
     position: relative;
     width: 100%;
-    /* min-height: 100vh; */ 
-    height: 100%;
+    min-height: 100vh; 
     font-family: 'Plein', sans-serif;
   }
-  
-  
   ::-webkit-scrollbar {display:none;}
