--- a/src/components/subscribe/s_Subscribe.module.css
+++ b/src/components/subscribe/s_Subscribe.module.css
@@ -11,19 +11,21 @@
 
 .email {
     position: relative;
-    padding: .75rem;
+    padding: .5rem;
     border-radius: 5px;
     outline: none;
-    border: none;
+    border: solid 1px #170c0c1a;
     flex: 1;
+    width: 100%;
+    font-size: .75rem;
 }
 
 .email-label {
     display: flex;
     align-items: center;
-    padding: 0 0 0 1rem;
     background-color: var(--white);
     cursor: pointer;
+    border: solid 1px #170c0c1a;
 }
 
 .input-section {
