--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,9 @@ input:-webkit-autofill:active {
     border-top: solid 1px grey;
   }
 }
+
+/* option{ 
+  background-color: red;
+  width:400px;
+  position: absolute;
+} */
