--- a/src/components/popup/s_popUp.module.css
+++ b/src/components/popup/s_popUp.module.css
@@ -1,14 +1,12 @@
 .popup {
     position: fixed;
     top: 20px;
-    right: -300px; /* Start outside of the viewport */
-    width: 250px;
-    padding: 10px;
+    right: -100%; /* Start outside of the viewport */
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    opacity: 1;
-    transform: translateX(100%);
+    opacity: 0;
+    transform: translate(50%, -100px);;
     transition: transform 0.75s ease-out, opacity 0.75s ease-out;
     z-index: 1000;
   }
@@ -16,7 +14,9 @@
   .popup.visible {
     right: 25px; /* Slide into the viewport */
     opacity: 1;
-    transform: translateX(0);
+    transform: translateX(50%);
+    width: 250px;
+    padding: 10px;
   }
 
 
