split up checkout component

--- a/src/components/popup/s_popUp.module.css
+++ b/src/components/popup/s_popUp.module.css
@@ -11,10 +11,11 @@
   }
   
   .popup.visible {
-    right: 30%; /* Slide into the viewport */
+    right: 10%; /* Slide into the viewport */
     opacity: 1;
     width: 250px;
     padding: 10px;
+    top: 10%;
   }
 
 
