--- a/src/components/subscribe/s_Subscribe.module.css
+++ b/src/components/subscribe/s_Subscribe.module.css
@@ -1,8 +1,9 @@
 .subscribe-container {
     display: flex;
     flex-direction: column;
-    padding: 1.5rem 1.5rem 4rem;
-    border-bottom: solid 0.5px rgb(23 12 12 / 25%);
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
 }
 .h2{ 
     font-size: 1.5rem;
@@ -17,6 +18,7 @@
     border: solid 1px #170c0c1a;
     flex: 1;
     width: 100%;
+    max-width: 400px;
     font-size: .75rem;
 }
 
@@ -43,11 +45,15 @@
     cursor: pointer;
 }
 
-.spam-message,
-.sign-up {
+.sign-up{
     font-size: 0.75rem;
-    margin: 0.2rem 0 1.2rem 0;
+    margin: 1.5rem 0 1.2rem .4rem;
     line-height: 1;
+}
+.spam-message {
+    font-size: 0.75rem;
+    margin-bottom: 1.5rem;
+    margin-left: .5rem;
 }
 
 .feedback-text {
@@ -57,10 +63,9 @@
 }
 
 .email-preference {
-    font-size: 1.5rem;
-    letter-spacing: -1.07px;
+    font-weight: 500;
     line-height: 1.63;
-    margin-bottom: 1.5rem;
+    margin-bottom: .5rem;
 }
 
 .email-type {
@@ -71,19 +76,18 @@
 
 .email-type-text {
     margin-left: .15rem;
+    margin-right: .5rem;
 }
 
 .radio-btn {
     position: relative;
-    width: 28px;
-    height: 28px;
+    width: 20px;
+    height: 20px;
     appearance: none;
     background: var(--white);
     border: 2px solid var(--black);
     border-radius: 14px;
     cursor: pointer;
-    height: 28px;
-    margin: 0 10px 0 0;
     padding: 0;
     position: relative;
 }
@@ -97,8 +101,8 @@
     border-radius: 50%;
     content: "";
     display: block;
-    height: 18px;
-    width: 18px;
+    height: 12px;
+    width: 12px;
     left: 50%;
     position: absolute;
     top: 50%;
@@ -111,12 +115,11 @@
 
 .radio-options {
     display: flex;
-    flex-direction: column;
 }
 
 .btn {
     align-self: end;
-    margin-top: -3.4rem;
+    margin-top: .5rem;
     background: #202020;
     border: 0;
     border-radius: 18px;
@@ -136,9 +139,9 @@
 
 .email-warning-text {
     position: relative;
-    top: 25px;
     color: #972111;
     font-weight: 500;
+    display: block;
 }
 
 
