--- a/src/components/subscribe/s_Subscribe.module.css
+++ b/src/components/subscribe/s_Subscribe.module.css
@@ -4,6 +4,7 @@
     max-width: 700px;
     width: 100%;
     margin: 0 auto;
+    padding: 0 1rem;
 }
 .h2{ 
     font-size: 1.5rem;
@@ -115,6 +116,7 @@
 
 .radio-options {
     display: flex;
+    column-gap: 1rem;
 }
 
 .btn {
