--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,19 @@ input {
   border-radius: 0;
 }
 
-input {
-  -webkit-border-radius: 0;
-  border-radius: 0;
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus
+ {
+  -webkit-text-fill-color: var(--black);
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus{
+  -webkit-box-shadow: 0 0 0px 1000px #fff inset !important;
 }
