--- a/src/components/subscribe/s_Subscribe.module.css
+++ b/src/components/subscribe/s_Subscribe.module.css
@@ -47,8 +47,7 @@
 }
 
 .sign-up{
-    font-size: 0.75rem;
-    margin: 1.5rem 0 1.2rem .4rem;
+    margin: 0 0 2rem .4rem;
     line-height: 1;
 }
 .spam-message {
